[FIXED JENKINS-8297] Allow packaging of multiple personas as a plugin instead of only one.